@startuml ER_Diagram
skinparam classFontSize 11
skinparam classBackgroundColor beige
skinparam ClassBorderColor red
skinparam ArrowColor red

entity "Answer" as answer {
  <u>id : Long</u>
  --
  content : String
  description: String
  ~~response_id: Long~~
}

entity "Response" as response {
  <u>id : Long</u>
  --
  ~~survey_id: Long~~
}

entity "AppUser" as user{
  <u>username: String</u>
  --
  password : String
  responses: List<Long>
}

entity "Survey" as survey {
  <u>id : Long</u>
  --
  closed : boolean
  title: String
  ~~user_id: Long~~
}

entity "Question" as question {
  <u>id : Long</u>
  --
  prompt : String
  type: QuestionType
  ~~survey_id: Long~~
}

entity "RadioChoiceQuestion" as rcq {
  --
  choices : String[]
}

entity "LongAnswerQuestion" as laq {
  --
  charLimit : int
}

entity "RangeQuestion" as rq {
  --
  increment: int
  lower: int
  upper: int
}

user ||--|{ survey
survey ||--|{ question
survey ||--|{ response
response||--|{ answer
question <|-- laq
question <|-- rcq
question <|-- rq
@enduml